Add NetBSD to native-free path and add native-free CI
NetBSD's oshi-common base classes (NetBsdOperatingSystem,
NetBsdHardwareAbstractionLayer) are already fully native-free, querying
sysctl/ps via the command line; the oshi-core JNA subclasses only swap in
a JNA processor and native pid/tid. So the native-free provider can use the
base NetBSD classes directly, letting NetBSD users without the JNA native
library depend on oshi-common alone, as Linux already does.

- oshi.nativefree.SystemInfo now selects Linux (*NF classes) or NetBSD (base
  classes) by PlatformEnum; isAvailable() covers LINUX and NETBSD.
- Refresh SystemInfoFactory error/javadoc and SystemInfoProvider priority-0
  javadoc for the two-platform native-free fallback.
- Gate nativefree SystemInfoTest and SystemInfoFactoryTest on a shared
  isNativeFreePlatform() helper using the same PlatformEnum detection as
  isAvailable(), so tests can't drift from production logic.
- README and index.md: native-free row now "Linux and NetBSD only".
- New nativefree.yaml CI builds/tests oshi-common in isolation (no
  oshi-core/JNA, no oshi-core-ffm): Linux on ubuntu, NetBSD in a VM without
  java-jna.